tests/fixtures/invalid/pow_set_set_float.py
# Cannot call pow() with Set[int], Set[int], Float
x = pow({1, 2, 3}, {1, 2, 3}, 1.0)
